Nav bar alignment fixes

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -56,6 +56,5 @@
 }
 
 .top-bar-right{
-	padding-top: 60px;
-	padding-right: 70px;
+	padding-top: 40px;
 }
