--- a/src/main/resources/static/css/logout.css
+++ b/src/main/resources/static/css/logout.css
@@ -56,6 +56,6 @@
 }
 
 .top-bar-right{
-	padding-top: 60px;
-	padding-right: 70px;
+	padding-top: 40px;
+
 }
